fix(scroll): fix scrolling behavior on ios devices

--- a/src/framework/theme/components/sidebar/_sidebar.component.theme.scss
+++ b/src/framework/theme/components/sidebar/_sidebar.component.theme.scss
@@ -45,6 +45,11 @@
         width: 0;
         padding: 0;
         overflow: hidden;
+
+        @include media-breakpoint-down(sm) {
+          overflow-y: scroll;
+          -webkit-overflow-scrolling: touch;
+        }
       }
 
       nb-sidebar-header,  nb-sidebar-footer {
